--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         		<div class="menu_out">
          		<img src="img/logo.png" alt="logo">          
 		          <ul class="main-nav">
-		            <li><a href="about.php" target="_blank">О нас</a></li>
+		            <li><a href="about.php">О нас</a></li>
 		            <li><a href="schedule.html" target="_blank">Расписание</a></li>
 		            <li><a href="#services">Услуги</a></li>  		              
 		            <li><a href="gallery.html" target="_blank">Фотогалерея</a></li>  
